add copper, silver, gold to database

--- a/src/main/webapp/templates/add-character.html
+++ b/src/main/webapp/templates/add-character.html
@@ -444,16 +444,16 @@
                     <div class="money">
                         <ul>
                             <li>
-                                <label>cp</label><input name="cp"/>
+                                <label>cp</label><input name="copper"/>
                             </li>
                             <li>
-                                <label>sp</label><input name="sp"/>
+                                <label>sp</label><input name="silver"/>
                             </li>
                             <li>
                                 <label>ep</label><input name="ep"/>
                             </li>
                             <li>
-                                <label>gp</label><input name="gp"/>
+                                <label>gp</label><input name="gold"/>
                             </li>
                             <li>
                                 <label>pp</label><input name="pp"/>
